# DoodleDrawerServer

./: .gitignore  CMakeLists.txt
includes/: gamemanager.h
src/: gamemanager.cpp  main.cpp
